--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">WordsToStudy</string>
-    <string name="appwidget_text">Just one widget is allowed</string>
+    <string name="appwidget_text">Words</string>
     <string name="configure">Configure</string>
     <string name="add_widget">Add widget</string>
     <string name="updPeriodLbl">Выбрать период обновления</string>
