Changing markers are created and updating related to their state. Needs to change scheduled update and add last update

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -12,4 +12,5 @@
     <string name="radioBtnWhite">White</string>
     <string name="RadioBtnBlack">Black</string>
     <string name="wordsCountLbl">Count of words</string>
+    <string name="wordsCountChangedMsg">New words count will be applied on next update</string>
 </resources>
