--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -13,4 +13,8 @@
     <string name="RadioBtnBlack">Черный</string>
     <string name="wordsCountLbl">Количество слов</string>
     <string name="wordsCountChangedMsg">Новое количество слов будет применено при следующем обновлении</string>
+    <string name="fontStyleBold">Жирный</string>
+    <string name="fontStyleItalic">Курсив</string>
+    <string name="fontStyleUnderlined">Подчеркнутый</string>
+    <string name="fontStyleTypelbl">Выбрать шрифт</string>
 </resources>
