--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,10 @@
     <string name="RadioBtnBlack">Black</string>
     <string name="wordsCountLbl">Count of words</string>
     <string name="wordsCountChangedMsg">New words count will be applied on next update</string>
+    <string name="fontStyleBold">Bold</string>
+    <string name="fontStyleItalic">Italic</string>
+    <string name="fontStyleUnderlined">Underlined</string>
+    <string name="fontStyleTypelbl">Choose fontStyle</string>
+    <string name="textview">TextView</string>
+    <string name="update_period">Update period</string>
 </resources>
